--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     annotationProcessor('org.projectlombok:lombok')
     compileOnly('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
     //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
