--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
     annotationProcessor('org.projectlombok:lombok')
     compileOnly('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
